testsuite/tests/properties/invalid_eq/node_bool/test.lkt
from common import FooNode

class Example: FooNode {
    @exported fun prop(): Bool = node == true
}
